# Hindsight

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml
alembic/: env.py
alembic/versions/: 20260704_0001_0001_initial_schema.py  20260713_0002_pipeline_columns.py  20260715_0003_incidents_table.py  20260716_0004_incident_labels.py
app/: __init__.py  main.py
app/annotation/: app.py  sampler.py  templates.py
app/api/v1/: __init__.py  health.py  ingest.py
app/core/: app.py  db.py  dependencies.py  logging.py  settings.py
app/events/: __init__.py  consumer.py  publisher.py  schemas.py  streams.py
app/ingest/: __main__.py  politeness.py  robots.py  seed_loader.py  ssrf_guard.py
app/ml/: classifier.py
app/models/: __init__.py  base.py  incident.py  incident_label.py  ingest.py  minhash_signature.py
app/repositories/: document.py  health.py  incident.py  incident_label.py  minhash.py  source.py
app/schemas/: health.py  ingest.py
app/services/: health.py  ingest.py  license_audit.py  promoter.py
app/workers/: __init__.py  __main__.py  classifier.py  crawler.py  deduper.py  echo.py  parser.py
docker/: Dockerfile
docs/: PROGRESS.md  SAD.md  dataset_card.md  datasheet.md  taxonomy.md
docs/adr/: 0001-postgres-for-everything.md  0002-redis-streams-over-kafka.md
docs/audit/: week0-3_audit.md  week0-5_audit.md
frontend/: README.md
ml/eval/: baseline.json  evaluator.py  golden_set.py  run.py
ml/export/: onnx_export.py
ml/training/: config.py  config.yaml  data.py  run.py  threshold.py  trainer.py
ml/weak_supervision/: keyword_lfs.py  llm_lf.py  types.py  voter.py
scripts/: agreement.py  backfill_classify.py  dataset_stats.py  export_dataset.py  pipeline_report.py  promote.py  push_dataset_to_hub.py  push_model_to_hub.py  reconcile_labels.py
tests/unit/: test_agreement.py  test_annotation.py  test_app.py  test_classifier.py  test_classifier_worker.py  test_consumer.py  test_crawler.py  test_deduper.py  test_eval.py  test_event_schemas.py  test_export.py  test_golden_set.py  test_health.py  test_ingest_service.py  test_keyword_lfs.py  test_license_audit.py  test_llm_lf.py  test_logging.py  test_models.py  test_onnx_export.py  test_parser.py  test_politeness.py  test_promoter.py  test_publisher.py  test_push_model.py  test_regression_gate.py  test_robots.py  test_sanity.py  test_seed_loader.py  test_settings.py  test_ssrf_guard.py  test_streams.py  test_threshold.py  test_training.py  test_voter.py  test_voter_properties.py
