[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "ml"]

[project]
name = "hindsight"
version = "0.1.0"
description = "Open incident-intelligence platform: ingest, NLP-enrich, semantic search, pattern surfacing"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Hindsight Contributors" }]
keywords = ["incident", "nlp", "rag", "observability", "open-source"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

# Main runtime dependencies
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "redis>=5.1.0",
    "structlog>=24.4.0",
    "pgvector>=0.3.0",
    "psycopg[binary]>=3.2.0",
    # Week 2: ingest pipeline
    "httpx>=0.27.0",
    "trafilatura>=1.12.0",
    "readability-lxml>=0.8.1",
    "datasketch>=1.6.0",
    "lxml>=5.0.0",
    # Week 3: dataset export + HF Hub
    "datasets>=3.0.0",
    "huggingface-hub>=0.25.0",
    # Week 5: classifier training + inference
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "safetensors>=0.4.0",
    "scikit-learn>=1.4.0",
    "iterative-stratification>=0.1.7",
    "optimum[onnxruntime]>=1.18.0",
    "onnxruntime>=1.17.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.8.0",
    "httpx>=0.27.0",
    "testcontainers>=4.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.8.0",
    "httpx>=0.27.0",
    "testcontainers>=4.8.0",
    "hypothesis>=6.100.0",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "ml", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "ANN", # flake8-annotations
    "RUF", # ruff-specific rules
]
ignore = [
    "S101",   # Use of `assert` detected (needed in tests)
    "B008",   # Depends() in argument defaults is the canonical FastAPI DI idiom
    "UP046",  # Prefer explicit Generic[TEvent] over PEP-695 syntax for clarity
    "UP047",  # (same, for generic functions)
]

[tool.ruff.lint.isort]
known-first-party = ["app", "ml"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S"]
"scripts/*.py" = ["S603", "S607", "ANN401"]
"ml/training/*.py" = ["ANN401"]
"ml/eval/*.py" = ["ANN401"]
"ml/export/*.py" = ["ANN401"]
# Autogenerated-style migration scripts: relax line length and import ordering.
"alembic/versions/*.py" = ["E501", "I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — strict type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
# Alembic migration scripts are auto-generated boilerplate; exclude from strict checks.
exclude = ["^alembic/versions/"]
# Per-module overrides can be added here as third-party stubs mature
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["testcontainers.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "trafilatura.*", "readability.*", "datasketch.*", "lxml.*", "datasets.*",
    "torch.*", "transformers.*", "safetensors.*", "sklearn.*",
    "iterstrat.*", "optimum.*", "onnxruntime.*", "onnx.*", "yaml.*",
    "wandb.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (require Docker)",
    "e2e: marks tests as end-to-end tests (require full stack)",
]
addopts = [
    "--strict-markers",
    "-ra",
]

# ---------------------------------------------------------------------------
# Coverage (used in Week 2+ CI)
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["app", "ml"]
omit = ["*/tests/*", "alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
